[package]
name = "policy-evaluator"
version = "0.1.0"
authors = [
  "Flavio Castelli <fcastelli@suse.com>",
  "Rafael Fernández López <rfernandezlopez@suse.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
kubewarden-policy-sdk = "0.1.0"
hyper = { version = "0.14" }
json-patch = "0.2.6"
kube = "0.51.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.15"
tokio = { version = "^1" }
tracing = "0.1"
tracing-futures = "0.2"
wapc = "0.10.1"
wasmtime-provider = "0.0.2"
