[package]
name = "policy-testdrive"
version = "0.1.0"
authors = [
  "Flavio Castelli <fcastelli@suse.com>",
  "Rafael Fernández López <rfernandezlopez@suse.com>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33.3"
policy-evaluator = { path = "../policy-evaluator" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
